--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="" method="get">
+		<div>
+			<label> Name : <input id="name" type="text"></label>
+		</div>
+		<div>
+			<label> Email : <input id="email" type="email"></label>
+		</div>
+		<div>
+			<label>Gender :</label>			
+			<label><input id="male" type="radio" name="male-female" value="male" checked required> Male</label>
+            <label><input id="female" type="radio" name="male-female" value="female" required> Female</label>
+		</div>
+		<div id="cars">
+			<label>Car Brands :</label>
+			<input id="bmw" type="radio" name="brand" value="loving" checked required> <label for="bmw">BMW</label>
+            <input id="audi" type="radio" name="brand" value="lazy" required> <label for="audi">Audi</label>
+            <input id="mercedez" type="radio" name="brand" value="energetic" required> <label for="mercedez">Mercedez</label>		
+		</div>
+		<div>
+			<label> Car Age : </label><input id="dop" type="number">
+		</div>
+		<div>
+			<label> DOP : </label> <input type="date">
+		</div>
+		<div>
+			<label> Password : </label><input id="password" type="password">
+		</div>
+		<div>
+			<button type="submit">Submit</button>
+		</div>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
