--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action="" method="get">
+<!-- 	<form action="" method="get">
 		<div>
 			<label> Name : <input id="name" type="text"></label>
 		</div>
@@ -38,7 +38,56 @@
 		<div>
 			<button type="submit">Submit</button>
 		</div>
+	</form> -->
+
+	<form method="get">
+		<div>
+			<label for="name">Name</label>
+			<input type="text" id="name" required>
+		</div>
+		<div>
+			<label for="email">Email</label>
+			<input type="email" id="email" required>
+		</div>
+		<div>
+			<label for="gender">Gender</label>
+			<input type="radio" name="gender" value="male" required>Male
+			<input type="radio" name="gender" value="female" required>Female
+			<input type="radio" name="gender" value="other" required>Other
+		</div>
+		<div>
+			<label for="cars">Car Brands</label>
+			<select id="cars">
+				<option value="bmw">BMW</option>
+				<option value="audi">Audi</option>
+				<option value="mercedez">Mercedez</option>
+			</select>
+		</div>
+		<div>
+			<label id="carage">Car Age</label>
+			<input type="number" id="carage" required>
+		</div>
+		<div>
+			<label>Date Of Purchase</label>
+			<input type="date" id="dop" required>
+		</div>
+		<div>
+			<label for="password">Password</label>
+			<input type="password" id="password" required>
+		</div>
+		<button type="submit">Submit</button>
 	</form>
+
+
+
+
+
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
