--- a/main.html
+++ b/main.html
@@ -7,40 +7,8 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-<!-- 	<form action="" method="get">
-		<div>
-			<label> Name : <input id="name" type="text"></label>
-		</div>
-		<div>
-			<label> Email : <input id="email" type="email"></label>
-		</div>
-		<div>
-			<label>Gender :</label>			
-			<label><input id="male" type="radio" name="male-female" value="male" checked required> Male</label>
-            <label><input id="female" type="radio" name="male-female" value="female" required> Female</label>
-		</div>
-		<div id="cars">
-			<label>Car Brands :</label>
-			<input id="bmw" type="radio" name="brand" value="loving" checked required> <label for="bmw">BMW</label>
-            <input id="audi" type="radio" name="brand" value="lazy" required> <label for="audi">Audi</label>
-            <input id="mercedez" type="radio" name="brand" value="energetic" required> <label for="mercedez">Mercedez</label>		
-		</div>
-		<div>
-			<label> Car Age : </label><input id="dop" type="number">
-		</div>
-		<div>
-			<label> DOP : </label> <input type="date">
-		</div>
-		<div>
-			<label> Password : </label><input id="password" type="password">
-		</div>
-		<div>
-			<button type="submit">Submit</button>
-		</div>
-	</form> -->
 
-	<form method="get">
+	<form method="post">
 		<div>
 			<label for="name">Name</label>
 			<input type="text" id="name" required>
@@ -64,11 +32,11 @@
 			</select>
 		</div>
 		<div>
-			<label id="carage">Car Age</label>
+			<label for="carage">Car Age</label>
 			<input type="number" id="carage" required>
 		</div>
 		<div>
-			<label>Date Of Purchase</label>
+			<label for="dop">Date Of Purchase</label>
 			<input type="date" id="dop" required>
 		</div>
 		<div>
